<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp"
            android:src="@drawable/marvel" />

        <LinearLayout
            android:layout_marginTop="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/_24sp"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:text="@string/name"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvName"
            tools:text="Marvel"
            android:textSize="@dimen/_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="@dimen/_10dp"
            android:textSize="@dimen/_24sp"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:text="@string/number_of_comics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvNumComics"
            tools:text="@string/_1234"
            android:textSize="@dimen/_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="@dimen/_10dp"
            android:textSize="@dimen/_24sp"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:text="@string/number_of_stories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvNumStories"
            tools:text="@string/_1234"
            android:textSize="@dimen/_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="@dimen/_10dp"
            android:textSize="@dimen/_24sp"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:text="@string/number_of_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvNumEvents"
            tools:text="@string/_1234"
            android:textSize="@dimen/_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="@dimen/_10dp"
            android:textSize="@dimen/_24sp"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:text="@string/number_of_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvNumSeries"
            tools:text="@string/_1234"
            android:textSize="@dimen/_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>